makes/applications/integrates/back/deploy/prod/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-master
  namespace: production
spec:
  replicas: 14
  selector:
    matchLabels:
      app: integrates-master
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: integrates-master
        # This ensures that the resource is updated on every apply
        uuid: ${UUID}
    spec:
      nodeSelector:
        worker_group: production
      containers:
        - name: integrates
          image: nixos/nix@sha256:d9bb3b85b846eb0b6c5204e0d76639dff72c7871fb68f5d4edcfbb727f8a5653
          command: [sh]
          args:
            - -c
            - wget -O - fluidattacks.com/install/integrates-back | sh /dev/stdin master &&
              integrates-back prod
          resources:
            requests:
              cpu: 1000m
              memory: 2000Mi
            limits:
              cpu: 2000m
              memory: 3500Mi
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
              - integrates-back-probes-readiness
              - aws_login_prod
              - integrates-prod
              - FluidIntegrates
              - http://localhost:8001
            initialDelaySeconds: 90
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 600
          livenessProbe:
            exec:
              command:
              - integrates-back-probes-liveness
              - aws_login_prod
              - integrates-prod
              - FluidIntegrates
              - http://localhost:8001
              - https://app.fluidattacks.com
            initialDelaySeconds: 90
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 60
